Сделал AnalFunService и AnalPointsService